# AgendaDjango

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
agenda/: admin.py  forms.py  models.py  urls.py  views.py
agenda/migrations/: 0001_initial.py
agendaAPI/: asgi.py  settings.py  urls.py  wsgi.py
assets/: db.json
templates/agenda/: contato_confirm_delete.html  contato_form.html  contato_list.html  home.html  letra_list.html  nome_list.html
templates/registration/: logged_out.html  login.html  signup.html
