[tool.poetry]
name = "agendadjango"
version = "0.1.0"
description = ""
authors = ["Adriel Leão"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
djangorestframework = "^3.14.0"
django-crispy-forms = "^2.0"
django-crispy-bootstrap = "^0.1.1.1"
crispy-bootstrap4 = "^2022.1"


[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.1"
django-debug-toolbar = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
